# robotframework-falsegreen

./: .all-contributorsrc  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  RELEASE.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  codex-review-gate.yml  credit-contributor.yml  release.yml
docs/: guide.md
examples/: README.md  dependency.robot  diagnostics.robot  effectiveness.robot  execution.robot  nondeterminism.robot  resource_file.resource  templates.robot
src/falsegreen_robot/: __init__.py  __main__.py  scanner.py
tests/: test_examples.py  test_scanner.py
