[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotframework-falsegreen"
version = "0.6.0"
description = "Find Robot Framework tests that pass green without protecting anything: tests with no verification keyword, swallowed failures, always-true checks. Deterministic static scan, sibling of falsegreen (Python) and falsegreen-js (JS/TS)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Queiroz" }]
keywords = ["robot-framework", "robotframework", "testing", "test-smells", "false-positive", "static-analysis", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = ["robotframework>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/vinicq/robotframework-falsegreen"
Issues = "https://github.com/vinicq/robotframework-falsegreen/issues"

[project.scripts]
# Package and repo carry the ecosystem prefix (robotframework-falsegreen); the
# command is short, mirroring rfbrowser (rf = Robot Framework). The import
# package stays falsegreen_robot, the same way robotframework-seleniumlibrary
# imports as SeleniumLibrary.
rffalsegreen = "falsegreen_robot.scanner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/falsegreen_robot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
